# Editorial_IPEA_IA

./: .env.example  .gitignore  README.md  Readme.md  __main__.py  pyproject.toml  streamlit_app.py
docs/: ESTADO_ATUAL_EDITORIAL.md  dataset_ouro.md
input_data/: 234362_TD_3125_Benefícios coletivos (53 laudas).docx
output_data/: 20260414_v3_capitulo_processos_RAIS 1_normalized_document.json  20260414_v3_capitulo_processos_RAIS 1_output_gpt5_2.relatorio.diagnostics.json  234362_TD_3125_Benefícios coletivos (53 laudas)_normalized_document.json  234362_TD_3125_Benefícios coletivos (53 laudas)_output_gpt5_2.relatorio.diagnostics.json  234362_TD_3125_Benefícios coletivos (53 laudas)_output_gpt5_2.relatorio.json
output_data/historico/: 20260414_v3_capitulo_processos_RAIS 1_output_gpt5_2.relatorio__20260415_103355.json  234362_TD_3125_Benefícios coletivos (53 laudas)_output_gpt5_2__20260415_104058.docx
src/editorial_docx/: __init__.py  __main__.py  abnt_citation_parser.py  abnt_document_types.py  abnt_matcher.py  abnt_normalizer.py  abnt_reference_parser.py  abnt_rules.py  abnt_validator.py  benchmark_runner.py  comment_localizer.py  config.py  context_selector.py  document_loader.py  docx_utils.py  gold_dataset.py  gold_metrics.py  graph_chat.py  llm.py  models.py  normalized_document.py  review_heuristics.py  review_patterns.py  token_utils.py  (+1 more)
testes/: 234362_TD_3125_Benefícios coletivos (53 laudas)_output_gpt4o.docx  234362_TD_3125_Benefícios coletivos (53 laudas)_output_gpt4o.relatorio.json  test_gold_dataset.py  test_gold_metrics.py  test_graph_chat.py  test_llm.py
(+81 files in other folders)
